--- a/assets/cv/en/index.html
+++ b/assets/cv/en/index.html
@@ -9,7 +9,8 @@
     <h1>Ezequiel Gatica CV Index (English)</h1>
     <ul>
         <li><a href="/assets/cv"><<<</a></li>
-        <li><a href="/assets/cv/en/cv-may-2024.pdf">May 2024 (current)</a></li>
+        <li><a href="/assets/cv/en/cv-may-2024.pdf">May 2024</a></li>
+        <li><a href="/assets/cv/en/cv-feb-2025.pdf">Feb 2025 (current)</a></li>
         <li><a href="/assets/cv/en/Ezequiel Gatica - CV [en].pdf">Last version</a></li>
     </ul>
 </body>
