--- a/assets/cv/es/index.html
+++ b/assets/cv/es/index.html
@@ -11,7 +11,8 @@
         <li><a href="/assets/cv"><<<</a></li>
         <li><a href="/assets/cv/es/cv-dic-2021.pdf">Diciembre 2021</a></li>
         <li><a href="/assets/cv/es/cv-ene-2023.pdf">Enero 2023</a></li>
-        <li><a href="/assets/cv/es/cv-may-2024.pdf">Mayo 2024 (actual)</a></li>
+        <li><a href="/assets/cv/es/cv-may-2024.pdf">Mayo 2024</a></li>
+        <li><a href="/assets/cv/es/cv-mar-2025.pdf">Marzo 2025 (actual)</a></li>
         <li><a href="/assets/cv/es/Ezequiel Gatica - CV [es].pdf">Ultima versión</a></li>
     </ul>
 </body>
