chore: Actualizando el CV al nuevo template

--- a/assets/cv/en/index.html
+++ b/assets/cv/en/index.html
@@ -10,7 +10,8 @@
     <ul>
         <li><a href="/assets/cv"><<<</a></li>
         <li><a href="/assets/cv/en/cv-may-2024.pdf">May 2024</a></li>
-        <li><a href="/assets/cv/en/cv-feb-2025.pdf">Feb 2025 (current)</a></li>
+        <li><a href="/assets/cv/en/cv-feb-2025.pdf">February 2025</a></li>
+        <li><a href="/assets/cv/en/cv-jun-2025.pdf">June 2025 (current)</a></li>
         <li><a href="/assets/cv/en/Ezequiel Gatica - CV [en].pdf">Last version</a></li>
     </ul>
 </body>
