chore: Boton para navegar al cv desde home y entre si

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         </a> <br/> -->
         <a href="./cuadros" target="_self" rel="noopener noreferrer">
             CUADROS >
+        </a> <br/>
+        <a href="./cv" target="_self" rel="noopener noreferrer">
+            CV >
         </a>
     </div>
 
