--- a/cv-en.html
+++ b/cv-en.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ezequiel Gatica - CV</title>    <style>
+    <title>Ezequiel Gatica - CV</title>
+    <style>
         body {
             margin: 0;
             padding: 0;
@@ -17,6 +18,10 @@
             left: 0;
             width: 100%;
             height: 100%;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
 
         .language-toggle {
@@ -38,6 +43,10 @@
             gap: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
 
         .language-toggle:hover {
