--- a/cv.html
+++ b/cv.html
@@ -18,6 +18,10 @@
             left: 0;
             width: 100%;
             height: 100%;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
 
         .language-toggle {
@@ -39,6 +43,10 @@
             gap: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
 
         .language-toggle:hover {
