chore: Actualizando cv porque tenia typos :p

--- a/assets/cv/es/index.html
+++ b/assets/cv/es/index.html
@@ -13,6 +13,7 @@
         <li><a href="/assets/cv/es/cv-ene-2023.pdf">Enero 2023</a></li>
         <li><a href="/assets/cv/es/cv-may-2024.pdf">Mayo 2024</a></li>
         <li><a href="/assets/cv/es/cv-mar-2025.pdf">Marzo 2025</a></li>
+        <li><a href="/assets/cv/es/cv-jun-2025-v1.pdf">Junio 2025 (viejo)</a></li>
         <li><a href="/assets/cv/es/cv-jun-2025.pdf">Junio 2025 (actual)</a></li>
         <li><a href="/assets/cv/es/Ezequiel Gatica - CV [es].pdf">Ultima versión</a></li>
     </ul>
